V4659: Update after first check in simulation

--- a/Prevu.Synoptics.V4659_Steinbais/L0/Pages/L0_P330.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L0/Pages/L0_P330.xaml
@@ -219,7 +219,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="128" VisibilityComponent="L1+239-21-CV1" VisibilitySignal="LS1" Canvas.Top="260" StatusComponent="L0+380-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1377" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="128" Canvas.Top="260" StatusComponent="L0+380-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1377" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -229,8 +229,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="370" VisibilityComponent="L1+239-21-CV1" VisibilitySignal="LS2" Canvas.Top="191" StatusComponent="L0+380-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1074" HorizontalAlignment="Left" VerticalAlignment="Top" Icon="Left"/>
-        <Labels:Pipe Width="104" VisibilityComponent="L1+239-21-CV1" VisibilitySignal="LS1" Canvas.Top="153" StatusComponent="L0+380-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1027" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="370" Canvas.Top="191" StatusComponent="L0+380-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1074" HorizontalAlignment="Left" VerticalAlignment="Top" Icon="Left"/>
+        <Labels:Pipe Width="104" Canvas.Top="153" StatusComponent="L0+380-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1027" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -257,7 +257,7 @@
         <Labels:Pipe Width="122" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+382-01-MA1" PipeHeight="Medium" Canvas.Left="1178" Canvas.Top="105" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="118" VisibilityComponent="L1+239-21-CV1" VisibilitySignal="LS1" Canvas.Top="160" StatusComponent="L1+234-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="149" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="120" VisibilityComponent="L2+239-21-CV1" VisibilitySignal="LS1" Canvas.Top="237" StatusComponent="L2+234-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="119" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="48" VisibilityComponent="L1+383-21-CV1" VisibilitySignal="LS1" Canvas.Top="85" StatusComponent="L0+382-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1443" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="48" VisibilityComponent="L0+383-21-CV1" VisibilitySignal="LS1" Canvas.Top="85" StatusComponent="L0+382-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1443" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -267,8 +267,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="129" VisibilityComponent="L1+383-21-CV1" VisibilitySignal="LS1" VerticalAlignment="Center" Canvas.Top="105" StatusComponent="L0+382-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1342" HorizontalAlignment="Left"/>
-        <Labels:Pipe Width="112" VisibilityComponent="L1+383-21-CV1" VisibilitySignal="LS2" VerticalAlignment="Top" Canvas.Top="146" StatusComponent="L0+382-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1352" HorizontalAlignment="Center"/>
+        <Labels:Pipe Width="129" VisibilityComponent="L0+383-21-CV1" VisibilitySignal="LS1" VerticalAlignment="Center" Canvas.Top="105" StatusComponent="L0+382-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1342" HorizontalAlignment="Left"/>
+        <Labels:Pipe Width="112" VisibilityComponent="L0+383-21-CV1" VisibilitySignal="LS2" VerticalAlignment="Top" Canvas.Top="146" StatusComponent="L0+382-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1352" HorizontalAlignment="Center"/>
         <Machines:V01_DV_Diverter Width="100" VerticalAlignment="Top" Canvas.Top="94" RenderTransformOrigin="0.5,0.5" Canvas.Left="1258" Height="72" HorizontalAlignment="Center"/>
         <Machines:V01_SLX_Silo_wAgitator Canvas.Left="188" Canvas.Top="269" Height="250" Width="169" HorizontalAlignment="Center" VerticalAlignment="Top" Color="DryMaterial" ComponentName="L0+320-43-LT1" TrendName="LEVEL"/>
         <Machines:V01_Radar Canvas.Left="284" Canvas.Top="243" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -342,7 +342,7 @@
         <Labels:DetailsLabel ComponentName="L0+320-HYD" DetailsPageName="L0_D320" HorizontalAlignment="Center" Canvas.Left="231" Canvas.Top="401" VerticalAlignment="Top" />
         <Labels:DetailsLabel ComponentName="L0+354-HEAT" DetailsPageName="L0_D354" Canvas.Left="498" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="L0+371-VIEW" DetailsPageName="L0_D371" HideComponentName="True" Canvas.Left="697" Canvas.Top="422" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="38" Canvas.Left="1263" HorizontalAlignment="Left" ComponentName="L1+383-21-CV1"/>
+        <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="38" Canvas.Left="1263" HorizontalAlignment="Left" ComponentName="L0+383-21-CV1"/>
         <Labels:DeviceLabel ComponentName="L0+320-43-LT1" Canvas.Left="292" Canvas.Top="188" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="L0+322-01-MA1" Canvas.Left="115" Canvas.Top="535" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="L0+328-01-MA1" Canvas.Left="19" Canvas.Top="724" HorizontalAlignment="Center" VerticalAlignment="Top" />
