--- a/Prevu.Synoptics.V4659_Steinbais/L1/Pages/L1_P230.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L1/Pages/L1_P230.xaml
@@ -23,7 +23,7 @@
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="77" StatusComponent="L1+450-02-MA1" Canvas.Left="408" Canvas.Top="196" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="76" StatusComponent="L1+230-71-ECS1" Canvas.Left="304" Canvas.Top="343" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="135" StatusComponent="L1+230-01-CV1" Canvas.Left="408" Canvas.Top="343" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="135" StatusComponent="L1+230-21-CV1" Canvas.Left="408" Canvas.Top="343" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="172" StatusComponent="L1+232-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="376" Canvas.Top="597" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -47,7 +47,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="139" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+234-01-MA1" PipeHeight="Medium" Canvas.Left="858" Canvas.Top="700"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="92" PipeHeight="Medium" StatusComponent="228-01-MA1" Canvas.Left="501" Canvas.Top="192">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="92" PipeHeight="Medium" StatusComponent="L1+230-71-ECS6" Canvas.Left="501" Canvas.Top="192">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
