--- a/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P230.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P230.xaml
@@ -23,7 +23,7 @@
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="77" StatusComponent="L2+450-02-MA1" Canvas.Left="408" Canvas.Top="196" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="76" StatusComponent="L2+230-71-ECS1" Canvas.Left="304" Canvas.Top="343" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="135" StatusComponent="L2+230-01-CV1" Canvas.Left="408" Canvas.Top="343" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="135" StatusComponent="L2+230-21-CV1" Canvas.Left="408" Canvas.Top="343" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="172" StatusComponent="L2+232-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="376" Canvas.Top="597" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -47,7 +47,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="139" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+234-01-MA1" PipeHeight="Medium" Canvas.Left="858" Canvas.Top="700"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="92" PipeHeight="Medium" StatusComponent="228-01-MA1" Canvas.Left="501" Canvas.Top="192">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="92" PipeHeight="Medium" StatusComponent="L2+230-71-ECS6" Canvas.Left="501" Canvas.Top="192">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -147,7 +147,6 @@
         <Labels:DeviceLabel ComponentName="L2+232-21-CV1" Canvas.Left="343" Canvas.Top="541" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L2+230-21-CV1" Canvas.Left="351" Canvas.Top="363" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L2+230-71-ECS4" Canvas.Left="183" Canvas.Top="353" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="L2+230-71-ECS9" Canvas.Left="183" Canvas.Top="418" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L2+230-71-ECS1" Canvas.Left="183" Canvas.Top="224" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L2+230-71-ECS3" Canvas.Left="183" Canvas.Top="289" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L2+230-71-ECS6" Canvas.Left="448" Canvas.Top="73" HorizontalAlignment="Left" VerticalAlignment="Center"/>
