--- a/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P430.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P430.xaml
@@ -338,5 +338,6 @@
         <Labels:DeviceLabel ComponentName="L2+442-01-MA1" Canvas.Left="999" Canvas.Top="783" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="L2+443-01-MA1" Canvas.Left="1133" Canvas.Top="579" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="L2+443-02-MA1" Canvas.Left="992" Canvas.Top="637" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="L2+320-01-MA1" Canvas.Left="227" Canvas.Top="324" HorizontalAlignment="Center" VerticalAlignment="Top" />
     </Canvas>
 </UserControl>
