--- a/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P440.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P440.xaml
@@ -123,8 +123,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="155" Color="Water" StatusComponent="L2+450-23-CV1" Canvas.Left="828" Canvas.Top="802" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="193" RenderTransformOrigin="0.5,0.5" Color="Chemicals" StatusComponent="L2+371-24-CV1" Canvas.Left="771" Canvas.Top="471" Text="{Custom:Loc ANTIFOAM}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="158" RenderTransformOrigin="0.5,0.5" Color="Chemicals" StatusComponent="L2+371-24-CV1" Canvas.Left="883" Canvas.Top="556" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="193" RenderTransformOrigin="0.5,0.5" Color="Chemicals" StatusComponent="L2+371-25-CV1" Canvas.Left="771" Canvas.Top="471" Text="{Custom:Loc ANTIFOAM}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="158" RenderTransformOrigin="0.5,0.5" Color="Chemicals" StatusComponent="L2+371-25-CV1" Canvas.Left="883" Canvas.Top="556" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -192,7 +192,7 @@
             </Rectangle.RenderTransform>
         </Rectangle>
         <Labels:JumpLabel JumpFromLabel="L2+475-41-LT1" JumpToLabel="L2+460-01-MA1" Canvas.Left="158" Canvas.Top="99" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="L2+383-21-CV1" JumpToLabel="L2+320-SILO" Canvas.Left="566" Canvas.Top="656" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
+        <Labels:JumpLabel JumpFromLabel="L2+450-01-MA1" JumpToLabel="L2+420-01-MA1" Canvas.Left="566" Canvas.Top="656" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
         <Labels:JumpLabel JumpFromLabel="L2+475-41-LT1" JumpToLabel="L2+458-01-MA1" Canvas.Left="113" Canvas.Top="174" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="L2+475-41-LT1" JumpToLabel="L2+470-01-MA1" Canvas.Left="203" Canvas.Top="24" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="L2+450-02-MA1" JumpToLabel="L2+230-01-MA1" Canvas.Left="1351" Canvas.Top="692" HorizontalAlignment="Left" VerticalAlignment="Center"/>
