--- a/Prevu.Synoptics.V4659_Steinbais/WaterView.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/WaterView.xaml
@@ -388,7 +388,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="72" RenderTransformOrigin="0.5,0.5" StatusComponent="292-01-MA1" Canvas.Left="117" Canvas.Top="1375" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="72" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+232-01-MA1" Canvas.Left="117" Canvas.Top="1375" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="213" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+450-02-MA1" Canvas.Left="184" Canvas.Top="1181" Icon="Left" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="122" StatusComponent="L2+450-02-MA1" Canvas.Left="125" Canvas.Top="1249" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -600,7 +600,7 @@
         <Machines:V01_WCE_Centrifuge Canvas.Left="172" Canvas.Top="339" Height="72" Width="107" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_MU_Grinder Canvas.Left="134" Canvas.Top="281" Height="88" Width="104" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="810" Canvas.Top="33" Height="102" Width="110" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VRC_WaterTank Canvas.Left="270" Canvas.Top="884" Height="82" Width="116" ComponentName="370-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VRC_WaterTank Canvas.Left="270" Canvas.Top="884" Height="82" Width="116" ComponentName="L0+370-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="404" Canvas.Top="800" Height="64" Width="56" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="967" Canvas.Top="99" Height="72" Width="108" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VSP_SepTank_w4Paddles Canvas.Left="684" Canvas.Top="70" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -906,9 +906,9 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Labels:ValueLabel Canvas.Left="312" Canvas.Top="894" TrendName="LEVEL" ComponentName="370-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:ValueLabel Canvas.Left="312" Canvas.Top="916" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="370-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:ValueLabel Canvas.Left="312" Canvas.Top="938" ComponentName="370-42-TT1" TrendName="TEMPERATURE" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:ValueLabel Canvas.Left="312" Canvas.Top="894" TrendName="LEVEL" ComponentName="L0+370-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:ValueLabel Canvas.Left="312" Canvas.Top="916" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="L0+370-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:ValueLabel Canvas.Left="312" Canvas.Top="938" ComponentName="L0+370-42-TT1" TrendName="TEMPERATURE" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="839" Canvas.Top="364" TrendName="LEVEL" ComponentName="L1+475-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="839" Canvas.Top="386" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="L1+475-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="598" Canvas.Top="526" TrendName="LEVEL" ComponentName="L1+450-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -924,7 +924,7 @@
         <Labels:GroupLabel GroupName="L1+440" Canvas.Left="710" Canvas.Top="438" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="L2+510" Canvas.Left="1403" Canvas.Top="808" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="L1+510" Canvas.Left="1403" Canvas.Top="598" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="L0+997" Canvas.Left="1021" Canvas.Top="833" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="L0+508" Canvas.Left="1021" Canvas.Top="833" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="L2+430" Canvas.Left="751" Canvas.Top="1191" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="L2+230" Canvas.Left="238" Canvas.Top="1307" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="L2+440" Canvas.Left="710" Canvas.Top="1441" HorizontalAlignment="Center" VerticalAlignment="Top"/>
